<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvStep3"
    app:contentPadding="12dp"
    app:cardCornerRadius="8dp"
    android:visibility="gone"
    app:cardElevation="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_confirm_appointment_data"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/label_description"/>

                <TextView
                    android:id="@+id/tvConfirmDescription"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Me duele la cabeza"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/label_specialty"/>

                <TextView
                    android:id="@+id/tvConfirmSpecialty"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Oftalmologia"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/label_type"/>

                <TextView
                    android:id="@+id/tvConfirmType"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Consulta"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/label_doctor"/>

                <TextView
                    android:id="@+id/tvConfirmDoctorName"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Médico Test"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/label_scheduled_date"/>

                <TextView
                    android:id="@+id/tvConfirmDate"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="2019-11-07"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/label_scheduled_time"/>

                <TextView
                    android:id="@+id/tvConfirmTime"
                    android:text="4:30 PM"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnConfirmAppointment"
                style="@style/MenuButton"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic_check"
                android:drawableRight="@drawable/ic_check"
                android:text="@string/btn_confirm" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.cardview.widget.CardView>