<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvStep2"
    android:layout_width="match_parent"
    android:visibility="gone"
    tools:visibility="visible"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="12dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_doctor" />

            <Spinner
                android:id="@+id/spinnerDoctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_scheduled_date" />

            <EditText
                android:id="@+id/etScheduledDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date"
                android:maxLines="1"
                android:onClick="onClickScheduledDate" />

            <TextView
                android:id="@+id/tvSelectDoctorAndDate"
                android:textColor="@color/colorAccent"
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_select_and_date"/>

            <TextView
                android:id="@+id/tvNotAvailableHours"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="6dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_not_avialable_hours"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/radioGroupLeft"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM" />

                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/radioGroupRight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:30 AM" />

                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:30 AM" />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btnNext2"
                style="@style/MenuButton"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic_navigate_next"
                android:drawableRight="@drawable/ic_navigate_next"
                android:text="@string/btn_next" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.cardview.widget.CardView>